// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scm --help > scm 1`] = `
"Usage: pingcode scm [options] [command]

源码管理 scm: the DevOps write-back surface for code hosting data (企业令牌 only, scopes
pcp:read:devops:code / pcp:write:devops:code)

Options:
  -h, --help      display help for command

Commands:
  platform        hosting platforms 托管平台 — the parent of every other scm resource
  platform-user   git author identities 托管平台用户 — what commit attribution matches by name
  repo            code repositories 代码仓库 — full_name (owner/name) is the unique key
  branch          code branches 代码分支 — the one scm family with a delete and no replace
  commit          commits 提交 — organisation-level, so these take no --platform
  ref             commit refs 提交引用 — the link from a commit to a branch
  pr              pull requests 拉取请求 — write-back records; there is no delete, so they are
                  permanent
  review          code reviews 代码评审 on ONE pull request — not the /v1/reviews object; no delete
                  exists
  help [command]  display help for command
"
`;

exports[`scm --help > scm branch 1`] = `
"Usage: pingcode scm branch [options] [command]

code branches 代码分支 — the one scm family with a delete and no replace

Options:
  -h, --help                 display help for command

Commands:
  list [options]             list the branches of a repository
  get [options] <branch>     show one branch
  create [options]           record a branch (the name must be unique in the repository)
  update [options] <branch>  patch a branch — only the fields you pass are sent
  delete [options] <branch>  delete a branch — irreversible, and it orphans the branch’s commit
                             refs
  help [command]             display help for command
"
`;

exports[`scm --help > scm branch create 1`] = `
"Usage: pingcode scm branch create [options]

record a branch (the name must be unique in the repository)

Options:
  --name <name>               branch name, e.g. feature/PLM-001-login
  --sender <git-username>     branch creator git username — an UNKNOWN name is CREATED as a
                              platform user, and platform users cannot be deleted
  --default                   make this the default branch (clears the flag on the branch that
                              holds it)
  --work-item <identifier>    work item identifier such as PLM-001, repeatable — an unknown one is
                              silently ignored by the API
  --platform <name|id>        hosting platform 托管平台 name or id
  --platform-id <id>          hosting platform 托管平台 name or id (an id, sent unchanged with no
                              lookup)
  --repo <name|full_name|id>  repository name, full_name (owner/name) or id
  --repo-id <id>              repository id, sent unchanged with no lookup
  -h, --help                  display help for command
"
`;

exports[`scm --help > scm branch delete 1`] = `
"Usage: pingcode scm branch delete [options] <branch>

delete a branch — irreversible, and it orphans the branch’s commit refs

Arguments:
  branch                      branch name or id

Options:
  --yes                       confirm the deletion — required, and there is no undo on this API
  --platform <name|id>        hosting platform 托管平台 name or id
  --platform-id <id>          hosting platform 托管平台 name or id (an id, sent unchanged with no
                              lookup)
  --repo <name|full_name|id>  repository name, full_name (owner/name) or id
  --repo-id <id>              repository id, sent unchanged with no lookup
  -h, --help                  display help for command
"
`;

exports[`scm --help > scm branch update 1`] = `
"Usage: pingcode scm branch update [options] <branch>

patch a branch — only the fields you pass are sent

Arguments:
  branch                      branch name or id

Options:
  --default                   make this the default branch — there is no --default false: the API
                              refuses it
  --work-item <identifier>    work item identifier such as PLM-001, repeatable — an unknown one is
                              silently ignored by the API; REPLACES the existing links
  --platform <name|id>        hosting platform 托管平台 name or id
  --platform-id <id>          hosting platform 托管平台 name or id (an id, sent unchanged with no
                              lookup)
  --repo <name|full_name|id>  repository name, full_name (owner/name) or id
  --repo-id <id>              repository id, sent unchanged with no lookup
  -h, --help                  display help for command
"
`;

exports[`scm --help > scm commit 1`] = `
"Usage: pingcode scm commit [options] [command]

commits 提交 — organisation-level, so these take no --platform

Options:
  -h, --help              display help for command

Commands:
  list [options]          list commits across the whole organisation — filter, or this scans
                          everything
  get [options] <commit>  show one commit, by id or SHA
  create [options]        record a commit — link it to a branch afterwards with \`scm ref create\`
  help [command]          display help for command
"
`;

exports[`scm --help > scm commit create 1`] = `
"Usage: pingcode scm commit create [options]

record a commit — link it to a branch afterwards with \`scm ref create\`

Options:
  --sha <sha>                 full 40-character SHA (the server validates this one)
  --message <text>            commit message
  --committer <git-username>  committer git username — unlike branch --sender this creates no
                              platform user
  --committed-at <when>       commit time: unix seconds or a date like 2026-08-03T09:00:00Z
  --tree-id <sha>             the commit tree SHA
  --added <path>              added file path, repeatable
  --removed <path>            removed file path, repeatable
  --modified <path>           modified file path, repeatable
  --work-item <identifier>    work item identifier such as PLM-001, repeatable — an unknown one is
                              silently ignored
  -h, --help                  display help for command
"
`;

exports[`scm --help > scm platform 1`] = `
"Usage: pingcode scm platform [options] [command]

hosting platforms 托管平台 — the parent of every other scm resource

Options:
  -h, --help                   display help for command

Commands:
  list [options]               list hosting platforms
  get [options] <platform>     show one hosting platform
  create [options]             register a hosting platform (the name must be unique in the
                               organisation)
  update [options] <platform>  patch a hosting platform — only the fields you pass are sent
  help [command]               display help for command
"
`;

exports[`scm --help > scm platform create 1`] = `
"Usage: pingcode scm platform create [options]

register a hosting platform (the name must be unique in the organisation)

Options:
  --name <name>         platform name, unique per organisation
  --type <type>         platform type, one of: github | gitlab | bitbucket | coding.net | gogs |
                        git | svn | gerrit | other
  --description <text>  description
  -h, --help            display help for command
"
`;

exports[`scm --help > scm platform-user 1`] = `
"Usage: pingcode scm platform-user [options] [command]

git author identities 托管平台用户 — what commit attribution matches by name

Options:
  -h, --help               display help for command

Commands:
  list [options]           list the git identities known to a platform
  get [options] <user>     show one git identity
  create [options]         register a git identity (the username must be unique on the platform)
  update [options] <user>  patch a git identity — only the fields you pass are sent
  help [command]           display help for command
"
`;

exports[`scm --help > scm platform-user create 1`] = `
"Usage: pingcode scm platform-user create [options]

register a git identity (the username must be unique on the platform)

Options:
  --name <name>          git username — the string commits are attributed by
  --display-name <text>  display name shown in PingCode
  --html-url <url>       profile page on the hosting platform
  --avatar-url <url>     avatar image on the hosting platform
  --platform <name|id>   hosting platform 托管平台 name or id
  --platform-id <id>     hosting platform 托管平台 name or id (an id, sent unchanged with no lookup)
  -h, --help             display help for command
"
`;

exports[`scm --help > scm pr 1`] = `
"Usage: pingcode scm pr [options] [command]

pull requests 拉取请求 — write-back records; there is no delete, so they are permanent

Options:
  -h, --help                       display help for command

Commands:
  list [options]                   list the pull requests of a repository
  get [options] <pull-request>     show one pull request
  create [options]                 record a pull request (the number must be unique in the
                                   repository)
  update [options] <pull-request>  patch a pull request — only the fields you pass are sent, plus
                                   its status
  help [command]                   display help for command
"
`;

exports[`scm --help > scm pr create 1`] = `
"Usage: pingcode scm pr create [options]

record a pull request (the number must be unique in the repository)

Options:
  --title <text>               pull request title
  --number <n>                 pull request number, unique within the repository
  --creator <git-username>     author git username — create the identity first with \`scm
                               platform-user create\`
  --target-branch-id <id>      target branch id, from \`scm branch list --json\` — an id, not a name
  --status <status>            pull request status, one of: open | closed | merged | abandoned
  --source-branch-id <id>      source branch id — optional here, unlike on the API’s PUT
  --description <text>         description
  --work-item <identifier>     work item identifier such as PLM-001, repeatable — an unknown one is
                               silently ignored by the API
  --platform <name|id>         hosting platform 托管平台 name or id
  --platform-id <id>           hosting platform 托管平台 name or id (an id, sent unchanged with no
                               lookup)
  --repo <name|full_name|id>   repository name, full_name (owner/name) or id
  --repo-id <id>               repository id, sent unchanged with no lookup
  --merged-at <when>           merge time: unix seconds or a date — required by the API when
                               --status merged
  --merged-commit-sha <sha>    the merge commit SHA — required by the API when --status merged
  --merged-by <git-username>   who merged it — required by the API when --status merged
  --comments-count <n>         number of comments on the pull request
  --review-comments-count <n>  number of code-review comments
  --commits-count <n>          number of commits
  --additions-count <n>        number of added files
  --deletions-count <n>        number of deleted files
  --changed-files-count <n>    number of changed files
  -h, --help                   display help for command
"
`;

exports[`scm --help > scm pr update 1`] = `
"Usage: pingcode scm pr update [options] <pull-request>

patch a pull request — only the fields you pass are sent, plus its status

Arguments:
  pull-request                 pull request id (find it with \`scm pr list --number <n> --json\`)

Options:
  --status <status>            new status, one of: open | closed | merged | abandoned — omit it and
                               the CURRENT status is read back and re-sent, because the API
                               requires this field on every patch
  --title <text>               new title
  --creator <git-username>     new author git username
  --description <text>         new description (replaces the old one)
  --source-branch-id <id>      new source branch id
  --target-branch-id <id>      new target branch id
  --work-item <identifier>     work item identifier such as PLM-001, repeatable — an unknown one is
                               silently ignored by the API; REPLACES the existing links
  --platform <name|id>         hosting platform 托管平台 name or id
  --platform-id <id>           hosting platform 托管平台 name or id (an id, sent unchanged with no
                               lookup)
  --repo <name|full_name|id>   repository name, full_name (owner/name) or id
  --repo-id <id>               repository id, sent unchanged with no lookup
  --merged-at <when>           merge time: unix seconds or a date — required by the API when
                               --status merged
  --merged-commit-sha <sha>    the merge commit SHA — required by the API when --status merged
  --merged-by <git-username>   who merged it — required by the API when --status merged
  --comments-count <n>         number of comments on the pull request
  --review-comments-count <n>  number of code-review comments
  --commits-count <n>          number of commits
  --additions-count <n>        number of added files
  --deletions-count <n>        number of deleted files
  --changed-files-count <n>    number of changed files
  -h, --help                   display help for command
"
`;

exports[`scm --help > scm ref 1`] = `
"Usage: pingcode scm ref [options] [command]

commit refs 提交引用 — the link from a commit to a branch

Options:
  -h, --help           display help for command

Commands:
  list [options]       list the commit refs of ONE branch — the API offers no repository-wide list
  get [options] <ref>  show one commit ref
  create [options]     link an existing commit to a branch (create the commit first)
  help [command]       display help for command
"
`;

exports[`scm --help > scm ref create 1`] = `
"Usage: pingcode scm ref create [options]

link an existing commit to a branch (create the commit first)

Options:
  --sha <sha>                 full SHA of a commit that already exists in PingCode
  --branch-id <id>            branch id — the referenced entity (from \`scm branch list|get\`)
  --platform <name|id>        hosting platform 托管平台 name or id
  --platform-id <id>          hosting platform 托管平台 name or id (an id, sent unchanged with no
                              lookup)
  --repo <name|full_name|id>  repository name, full_name (owner/name) or id
  --repo-id <id>              repository id, sent unchanged with no lookup
  -h, --help                  display help for command
"
`;

exports[`scm --help > scm repo 1`] = `
"Usage: pingcode scm repo [options] [command]

code repositories 代码仓库 — full_name (owner/name) is the unique key

Options:
  -h, --help               display help for command

Commands:
  list [options]           list the repositories of a platform
  get [options] <repo>     show one repository
  create [options]         register a repository (full_name must be unique on the platform)
  update [options] <repo>  patch a repository — only the fields you pass are sent
  help [command]           display help for command
"
`;

exports[`scm --help > scm repo create 1`] = `
"Usage: pingcode scm repo create [options]

register a repository (full_name must be unique on the platform)

Options:
  --name <name>             repository name, e.g. pingcode-cli
  --full-name <owner/name>  unique full name, e.g. acme/pingcode-cli
  --platform <name|id>      hosting platform 托管平台 name or id
  --platform-id <id>        hosting platform 托管平台 name or id (an id, sent unchanged with no lookup)
  --description <text>      description (replaces the old one)
  --owner-name <name>       owner git username — an unknown name is CREATED as a platform user, not
                            rejected
  --private <bool>          is the repository private (true|false)
  --fork <bool>             is the repository a fork (true|false)
  --html-url <url>          repository page on the hosting platform
  --branches-url <url>      branch link template, using {branch}
  --commits-url <url>       commit link template, using {sha}
  --compare-url <url>       compare link template, using {base} and {head}
  --pulls-url <url>         pull request link template, using {number}
  -h, --help                display help for command
"
`;

exports[`scm --help > scm review 1`] = `
"Usage: pingcode scm review [options] [command]

code reviews 代码评审 on ONE pull request — not the /v1/reviews object; no delete exists

Options:
  -h, --help                 display help for command

Commands:
  list [options]             list the code reviews of ONE pull request — the API offers no
                             repository-wide list
  get [options] <review>     show one code review
  create [options]           record a code review on a pull request
  update [options] <review>  patch a code review — only the fields you pass are sent
  help [command]             display help for command
"
`;

exports[`scm --help > scm review create 1`] = `
"Usage: pingcode scm review create [options]

record a code review on a pull request

Options:
  --status <status>           review status, one of: comment | approved | request_changes
  --reviewer <git-username>   reviewer git username — create the identity first with \`scm
                              platform-user create\`
  --submitted-at <when>       when the review was submitted: unix seconds or a date like
                              2026-08-03T09:00:00Z (required — a review carries no server-side
                              timestamp)
  --description <text>        the review body
  --html-url <url>            link back to the review on the hosting platform
  --platform <name|id>        hosting platform 托管平台 name or id
  --platform-id <id>          hosting platform 托管平台 name or id (an id, sent unchanged with no
                              lookup)
  --repo <name|full_name|id>  repository name, full_name (owner/name) or id
  --repo-id <id>              repository id, sent unchanged with no lookup
  --pr-id <id>                pull request id — an id, not a number (find it with \`scm pr list
                              --number <n> --json\`)
  -h, --help                  display help for command
"
`;

exports[`scm --help > scm review update 1`] = `
"Usage: pingcode scm review update [options] <review>

patch a code review — only the fields you pass are sent

Arguments:
  review                      code review id (from \`scm review list --pr-id <id> --json\`)

Options:
  --status <status>           new status, one of: comment | approved | request_changes
  --reviewer <git-username>   new reviewer git username
  --submitted-at <when>       new submission time: unix seconds or a date
  --description <text>        new review body (replaces the old one)
  --html-url <url>            new link back to the hosting platform
  --platform <name|id>        hosting platform 托管平台 name or id
  --platform-id <id>          hosting platform 托管平台 name or id (an id, sent unchanged with no
                              lookup)
  --repo <name|full_name|id>  repository name, full_name (owner/name) or id
  --repo-id <id>              repository id, sent unchanged with no lookup
  --pr-id <id>                pull request id — an id, not a number (find it with \`scm pr list
                              --number <n> --json\`)
  -h, --help                  display help for command
"
`;
